<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/margin_16"
        tools:context=".MainActivity">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.5" />

        <ru.vladisman.customclock.ClockView
            android:id="@+id/clockView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@id/guideline"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_24"
            android:text="@string/change_color"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/guideline" />

        <Button
            android:id="@+id/btn_background"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_24"
            android:text="@string/background"
            app:layout_constraintEnd_toStartOf="@id/btn_frame"
            app:layout_constraintStart_toStartOf="@id/text"
            app:layout_constraintTop_toBottomOf="@id/text" />

        <Button
            android:id="@+id/btn_frame"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_16"
            android:text="@string/frame"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/btn_background"
            app:layout_constraintTop_toTopOf="@id/btn_background" />

        <Button
            android:id="@+id/btn_dots"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_16"
            android:text="@string/dots"
            app:layout_constraintEnd_toStartOf="@id/btn_digits"
            app:layout_constraintStart_toStartOf="@id/text"
            app:layout_constraintTop_toBottomOf="@id/btn_background" />

        <Button
            android:id="@+id/btn_digits"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_16"
            android:text="@string/digits"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/btn_dots"
            app:layout_constraintTop_toTopOf="@id/btn_dots" />

        <Button
            android:id="@+id/btn_hour_hand"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_16"
            android:text="@string/hour_hand"
            app:layout_constraintEnd_toStartOf="@id/btn_minute_hand"
            app:layout_constraintStart_toStartOf="@id/text"
            app:layout_constraintTop_toBottomOf="@id/btn_dots" />

        <Button
            android:id="@+id/btn_minute_hand"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_16"
            android:text="@string/minute_hand"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/btn_hour_hand"
            app:layout_constraintTop_toTopOf="@id/btn_hour_hand" />

        <Button
            android:id="@+id/btn_second_hand"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_16"
            android:text="@string/second_hand"
            app:layout_constraintEnd_toStartOf="@id/btn_reset"
            app:layout_constraintStart_toStartOf="@id/text"
            app:layout_constraintTop_toBottomOf="@id/btn_hour_hand" />

        <Button
            android:id="@+id/btn_reset"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/reset"
            android:backgroundTint="@color/teal_700"
            android:layout_marginStart="@dimen/margin_16"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/btn_second_hand"
            app:layout_constraintTop_toTopOf="@id/btn_second_hand" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>